# rosbag-reader

./: README.md  bag_rdr.cpp  bag_rdr.hpp  main.cpp  meson.build  rosparser.vcxproj
common/: array_view.hpp  common_optional.hpp  common_panic.hpp  common_timestamp.hpp  file_handle.hpp  string_view.hpp  unix_err.hpp
